kubernetes/platform/identity/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: authentik-server
      port:
        number: 80
  tls:
    - hosts:
        - authentik
